syntax = "proto3";

package atomix.controller;

import "google/protobuf/any.proto";

// Partition identifier
message PartitionId {
    int32 partition = 1;
    PartitionGroupId group = 2;
}

// Partition group name
message PartitionGroupId {
    string name = 1;
    string namespace = 2;
}

// Partition configuration
message PartitionConfig {
    PartitionId partition = 1;
    NodeConfig controller = 2;
    repeated NodeConfig members = 3;
}

// Node configuration
message NodeConfig {
    string id = 1;
    string host = 2;
    int32 port = 3;
}

// Partition group info
message PartitionGroup {
    PartitionGroupId id = 1;
    PartitionGroupSpec spec = 2;
    repeated Partition partitions = 3;
}

// Partition info
message Partition {
    int32 partition_id = 1;
    repeated PartitionEndpoint endpoints = 2;
}

// Partition endpoint
message PartitionEndpoint {
    string host = 1;
    int32 port = 2;
}

// Partition group specification
message PartitionGroupSpec {
    uint32 partitions = 1;
    uint32 partition_size = 2;
    google.protobuf.Any protocol = 3;
}
