syntax = "proto3";

package atomix.protocols.raft;

import "google/protobuf/duration.proto";

// Raft protocol configuration
message RaftProtocol {
    google.protobuf.Duration election_timeout = 1;
    google.protobuf.Duration heartbeat_interval = 2;
    StorageSpec storage = 3;
    CompactionSpec compaction = 4;
}

// Partition group storage configuration
message StorageSpec {
    uint32 max_entry_size = 1;
    uint32 segment_size = 2;
    StorageLevel level = 3;
    bool flush_on_commit = 4;
}

// Storage level
enum StorageLevel {
    DISK = 0;
    MAPPED = 1;
}

// Partition group compaction configuration
message CompactionSpec {
    bool dynamic = 1;
    double free_disk_buffer = 2;
}

// Member group strategy
enum MemberGroupStrategy {
    HOST_AWARE = 0;
    RACK_AWARE = 1;
    ZONE_AWARE = 2;
}
